<resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">
    <string name="app_name">LandmarksGO</string>

    <!-- MAIN Activity -->
    <string name="settings">Settings</string>

    <!-- LOGIN Activity -->
    <string name="hint_email">Email</string>
    <string name="hint_password">Password</string>
    <string name="btn_login">LOGIN</string>
    <string name="btn_link_to_register">Not a member? Get registered now!</string>
    <string name="btn_link_to_login">Already registered. Login Me!</string>
    <string name="minimum_password">Password too short, enter minimum 6 characters!</string>
    <string name="auth_failed">Authentication failed, check your email and password or sign up</string>

    <!-- SIGNUP Activity -->
    <string name="firstname">First Name</string>
    <string name="lastname">Last Name</string>
    <string name="email">Email</string>
    <string name="action_sign_in_short">Register</string>
    <string name="btn_forgot_password">Forgot your password?</string>

    <!-- RESET PASSWORD Activity -->
    <string name="lbl_forgot_password">Forgot password?</string>
    <string name="forgot_password_msg">We just need your registered Email to sent you password reset instructions.</string>
    <string name="btn_reset_password">Reset Password</string>
    <string name="btn_back"><![CDATA[<< Back]]></string>

    <!-- SETTINGS Activity -->
    <string name="hint_new_email">New Email</string>
    <string name="new_pass">New Password</string>
    <string name="save">Save</string>
    <string name="change_email">Change Email</string>
    <string name="change_photo">Change Profile Picture</string>
    <string name="camera_upload">Camera</string>
    <string name="gallery_upload">Gallery</string>
    <string name="change_password">Change Password</string>
    <string name="remove_user">Delete account</string>
    <string name="btn_change">Change</string>
    <string name="btn_send">Send</string>
    <string name="btn_remove">Remove</string>
    <string name="btn_sign_out">Sign Out</string>
    <string name="workinback">Work in background</string>
    <string name="showplayers">Show other players on the map</string>
    <string name="showfriends">Show friends on the map</string>
    <string name="gps_refresh">GPS refresh time</string>
    <string name="about">About</string>
    <string name="title_activity_main">LandmarksGO</string>
    <string-array name="gps_refresh_array">
        <item>1</item>
        <item>5</item>
        <item>10</item>
    </string-array>

    <!-- ADDLANDMARK Activity -->
    <string-array name="add_landmark_array">
        <item>Monument</item>
        <item>Statue</item>
        <item>Building</item>
    </string-array>
    <string name="landmark_name">Landmark Name:</string>
    <string name="landmark_desc">Description:</string>
    <string name="landmark_type">Type of object:</string>
    <string name="landmark_lon">Longitude:</string>
    <string name="landmark_lat">Latitude:</string>
    <string name="pick_from_map">Pick from map</string>
    <string name="add">Add</string>
    <string name="cancel">Cancel</string>


    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="title_activity_friends">Friends</string>
    <string name="title_activity_highscore">High Score</string>
    <string name="title_activity_addlandmark">Add Landmark</string>
    <string name="title_activity_settings">Settings</string>
    <string name="title_activity_friendsaddnew">Add New Friend</string>
    <string name="title_activity_maps">Map</string>
    <string name="add_new_friend">Add new friend</string>

    <!-- SEARCH DROPDOWN IN MAP -->
    <string-array name="search_type">
        <item>Name</item>
        <item>Distance</item>
        <item>Category</item>
    </string-array>

    <!-- BLUETOOTH- SEND FRIEND REQUEST -->

    <string name="send">Send</string>
    <string name="not_connected">You are not connected to a device</string>
    <string name="bt_not_enabled_leaving">Bluetooth was not enabled.</string>
    <string name="title_connecting">Connecting...</string>
    <string name="title_connected_to">Connected to <xliff:g id="device_name">%1$s</xliff:g></string>
    <string name="title_not_connected">Not connected</string>

    <string name="scanning">Scanning for devices...</string>
    <string name="select_device">Select a Device to connect to:</string>
    <string name="none_paired">No devices have been paired</string>
    <string name="none_found">No devices found</string>
    <string name="title_paired_devices">Paired Devices</string>
    <string name="title_other_devices">Other Available Devices</string>
    <string name="button_scan">Scan for devices</string>

    <string name="secure_connect">Connect a device - Secure</string>
    <string name="insecure_connect">Connect a device - Insecure</string>
    <string name="discoverable">Make discoverable</string>
    <string name="title_activity_devicelist">Device List</string>
    <string name="title_player_info">Player info</string>

</resources>
